services/gateway/mcg-dest-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: profile-svc
spec:
  host: profile-svc
  subsets:
  - name: v1
    labels:
      version: v1
